# UltrERP

./: .env.example  .gitignore  .story21_4_vitest.json  AGENTS.md  CLAUDE.md  ERPnext-Research-Report.md  ERPnext-Validated-Research-Report.md  OBSIDIAN_SYNC.md  README.md  analyze_slips.py  entities.json  eslint.config.js  i18n-coverage-report.json  index.html  mempalace.yaml  package.json  pnpm-lock.yaml  seed_user.py  setup-skills.sh  sync-to-obsidian.sh  tsconfig.json  vite.config.ts
backend/: compute_rop.py  compute_rop_sql.py  pyproject.toml
backend/.omc/: project-memory.json
backend/app/: main.py  mcp_auth.py  mcp_identity.py  mcp_server.py  mcp_setup.py
backend/common/: auth.py  cli_args.py  config.py  database.py  errors.py  events.py  model_registry.py  object_store.py  order_reporting.py  tenant.py  time.py  time_series.py
backend/docs/: SPEC-dual-source-staging.md
backend/domains/: __init__.py
backend/scripts/: _legacy_stock_adjustments.py  apply_reconciliation_corrections.py  backfill_invoice_unit_cost.py  backfill_purchase_receipts.py  backfill_sales_reservations.py  bootstrap_dev_database.py  cleanup_reorder_point_test_fixtures.py  legacy_refresh_common.py  legacy_refresh_state.py  legacy_runtime_schema.py  propose_reconciliation_corrections.py  refresh_sales_monthly.py  repair_inventory_snapshot_warehouses.py  reset_legacy_import_batch.py  run_incremental_legacy_refresh.py  run_legacy_promotion.py  run_legacy_refresh.py  run_scheduled_legacy_shadow_refresh.py  verify_reconciliation.py
backend/tests/: conftest.py  db.py  test_aeo_content.py  test_aeo_jsonld.py  test_aeo_sitemap.py  test_apply_reconciliation_corrections.py  test_approval.py  test_audit_log_migration.py  test_audit_service.py  test_auth.py  test_config.py  test_customer_default_discount_migration.py  test_health.py  test_legacy_import_skill.py  test_legacy_refresh_control_plane.py  test_legacy_runtime_schema.py  test_legacy_stock_backfill_scripts.py  test_line_confirmation.py  test_line_notification.py  test_line_parser.py  test_line_webhook.py  test_mcp_auth.py  test_mcp_customers.py  test_mcp_intelligence.py  test_mcp_inventory.py  test_mcp_invoices.py  test_mcp_orders.py  test_mcp_payments.py  test_mcp_purchases.py  test_mcp_server.py  test_order_discount_columns_migration.py  test_order_line_pricing_columns_migration.py  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+1829 files in other folders)
