[package]
name = "ultrerp-desktop"
version = "0.1.0"
description = "UltrERP desktop shell"
authors = ["Hcchang"]
edition = "2021"

[lib]
name = "ultrerp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-notification = "2"